--- a/app/globals.css
+++ b/app/globals.css
@@ -31,28 +31,6 @@ html {
   transition-duration: 150ms;
 }
 
-.hover\:scale-105:hover {
-  transform: scale(1.05);
-}
-
-@keyframes gradientShift {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
-
-.gradient-animation {
-  background: linear-gradient(90deg, #1e3a8a, #9333ea, #db2777);
-  background-size: 300% 300%;
-  animation: gradientShift 6s ease infinite;
-}
-
 .hero-section {
   position: relative;
 }
@@ -70,57 +48,61 @@ html {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 100%;
-  height: 100%;
   transform: translate(-50%, -50%);
+  width: 200px;
+  height: 200px;
   animation: spiral 6s infinite;
 }
 
-@keyframes spiral {
-  0% {
-    transform: translate(-50%, -50%) rotate(0deg) translateX(50px);
-  }
-  100% {
-    transform: translate(-50%, -50%) rotate(360deg) translateX(200px);
-  }
-}
-
 .confetti div {
+  position: absolute;
   width: 10px;
   height: 10px;
   background-color: #ff6347;
   border-radius: 50%;
-  position: absolute;
-  animation: confettiAnimation 2s ease-in-out infinite;
+  animation: confettiAnimation 3s ease-in-out infinite;
 }
 
 .confetti div:nth-child(1) {
+  background-color: #ff6347;
   animation-delay: 0s;
 }
 
 .confetti div:nth-child(2) {
+  background-color: #32cd32;
   animation-delay: 0.5s;
 }
 
 .confetti div:nth-child(3) {
+  background-color: #ff1493;
   animation-delay: 1s;
 }
 
 .confetti div:nth-child(4) {
+  background-color: #1e90ff;
   animation-delay: 1.5s;
+}
+
+@keyframes spiral {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg) translateX(0);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg) translateX(150px);
+  }
 }
 
 @keyframes confettiAnimation {
   0% {
-    transform: scale(1);
+    transform: scale(1) rotate(0deg);
     opacity: 1;
   }
   50% {
-    transform: scale(1.5);
+    transform: scale(1.2) rotate(180deg);
     opacity: 0.6;
   }
   100% {
-    transform: scale(1);
+    transform: scale(1) rotate(360deg);
     opacity: 0;
   }
 }
